--- a/css/first-style.css
+++ b/css/first-style.css
@@ -35,3 +35,8 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 20pt;
 }
+
+.image img {
+  width: 100px;
+  height: 100px;
+}
